--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "three": "^0.172.0",
+    "web-speech-cognitive-services": "^8.1.1",
     "ws": "^8.18.0"
   },
   "devDependencies": {
